--- a/src/app/Bootstrap/learning/learning.component.html
+++ b/src/app/Bootstrap/learning/learning.component.html
@@ -1,1 +1,32 @@
-<!--Grid bootstrap5-->
+<!--container-->
+<div class="container bg-dark ">
+<p>hi</p>
+</div>
+<div class="container-sm bg-primary">
+<p>hi</p>
+</div>
+<div class="container-md bg-primary">
+  <p>hi</p>
+  </div>
+
+  <div class="container-lg bg-dark">
+    <p>hi</p>
+    </div>
+    <div class="container-xl bg-primary">
+      <p>hi</p>
+      </div>
+<!--
+  grid system
+-->
+<div class="container bg-white">
+<div class="row">
+<div class="col-4  ">hi</div>
+<div class="col-4 ">hi</div>
+<div class="col-4 ">hi</div>
+
+
+
+
+</div>
+
+</div>
