--- a/src/app/GitHub/find-user/find-user.component.html
+++ b/src/app/GitHub/find-user/find-user.component.html
@@ -46,7 +46,8 @@
     </div>
 
     @if(userinfo.followers_url) {
-    <span class="d-flex justify-content-center"><button (click)="getfollowers()" class="form-control" style="width: 200px;" [disabled]="userinfo.conut">Get Followers</button></span>
+    <span class="d-flex justify-content-center"><button (click)="getfollowers()" class="form-control"
+        style="width: 200px;" [disabled]="userinfo.conut">Get Followers</button></span>
     }@else{
 
     }
@@ -59,10 +60,8 @@
     }
   </div>
 
-
   <div>
-
-
-
+    <!-- Designed by Dirushan -->
+    <p class="d-flex justify-content-center">Designed by Dirushan</p>
   </div>
 </div>
